[package]
name = "athm"
version = "0.1.0"
edition = "2021"

[features]
test-vectors = ["hex", "rand_chacha", "serde", "serde_json"]

[dependencies]
p256 = { version = "0.13.2", features = ["arithmetic", "expose-field", "hash2curve", "ecdsa"] }
elliptic-curve = { version = "0.13", features = ["arithmetic", "digest", "sec1"] }
subtle = "2.6.1"
sha2 = "0.10"
rand = { version = "0.8", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
digest = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"
group = "0.13"
ff = "0.13"
sec1 = { version = "0.7", features = ["point"] }
hex = { version = "0.4", optional = true }
rand_chacha = { version = "0.3", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"]  }
serde_json = { version = "1.0", optional = true}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "athm_benchmarks"
harness = false

[[bin]]
name = "generate-test-vectors"
required-features = ["test-vectors"]
