[package]
name = "bssl-sys"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Auto-building wrapper for BoringSSL Rust bindings (bssl-sys)"

# This exists to workaround a limitation in cargo:
# https://github.com/rust-lang/cargo/issues/3544
links = "bssl"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bindgen_rs_file)'] }
